<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.manikgupta.whatsappuiclone.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    android:id="@+id/rootLayout">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circular_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/image" />


        <LinearLayout
            android:id="@+id/rLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myStatusView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginLeft="5dp"
                android:text="@string/myStatustxtView"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/statusDescriptiontxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_marginLeft="5dp"
                android:text="@string/statusDescription"
                android:paddingStart="8dp"
                android:layout_marginStart="5dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/recentUpdates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rootLayout"
        android:layout_alignRight="@+id/rootLayout"
        android:layout_below="@+id/rootLayout"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="3dp"
        android:textColor="#006400"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="#d3d3d3"
        android:text="@string/recentUpdates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginStart="3dp" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentUpdates"
        android:layout_marginLeft="8dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/someone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentUpdates" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">


        <TextView
            android:id="@+id/someOneTxtView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/someone"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/recentUpdates"
            app:layout_constraintVertical_bias="0.357"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/timeTxtView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/someOneTxtView"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/someOneTxtView"
            android:layout_marginLeft="8dp" />

    </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>


