<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circular_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:src="@drawable/image"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rLayout"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nameTextView"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:id="@+id/name"
                    android:textColor="@android:color/black"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_gravity="end"
                    android:text="@string/dateTextView"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/double_tick"
                    android:src="@drawable/double_tick"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/messageText"
                    android:text="@string/messageTextView"/>

            </LinearLayout>


        </LinearLayout>

        </LinearLayout>


    </LinearLayout>




